2000-02-15  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/libm-test-ulps: Add one value for AMD K7.

2000-02-15  Andreas Jaeger  <aj@suse.de>

	* math/libm-test.inc (nearbyint_test): Add some tests.
	(rint_test): Likewise.

2000-02-14  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/repertoire.c (repertoire_new_char): NUL
	terminated names of character in range.

	* stdio-common/vfprintf.c (vfprintf): Initialize thousands_sep.
	Define and initialize use_outdigits in the inner loops.

	* sysdeps/posix/sigwait.c: Don't look for signal 0 since it does
	not exist.  Patch by Miloslav Trmac <mitr@volny.cz> (PR libc/1601).

	* sysdeps/i386/fpu/s_nearbyint.S: Disable raising exception, not
	enable it.  Patch by Miloslav Trmac <mitr@volny.cz> (PR libc/1600).
	* sysdeps/i386/fpu/s_nearbyintf.S: Likewise.
	* sysdeps/i386/fpu/s_nearbyintl.S: Likewise.

2000-02-14  Andreas Jaeger  <aj@suse.de>

	* elf/rtld.c (dl_main): Fix check for references to dynamic linker.

2000-02-14  Ulrich Drepper  <drepper@redhat.com>

	* manual/job.texi: Fix typos.
	* manual/process.texi: Likewise.
	* manual/signal.texi: Likewise.

	* sysdeps/powerpc/atomicity.h: Remove white space to avoid
	compiler warning.

2000-02-14  Scott Bambrough  <scottb@netwinder.org>

	* sysdeps/unix/sysv/linux/arm/ioperm.c (_iopl, _ioperm):  Add
	Rebel-NetWinder to platform table so _ioperm platform lookup via
	/proc/cpuinfo works on later version NetWinders.

2000-02-13  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/charmap.c (charmap_read): Remove erronous free
	call.

	* sysdeps/i386/fpu/s_cosf.S: Domain of opcode is not large enough
	so test for overflow and handle it.
	* sysdeps/i386/fpu/s_sinf.S: Likewise.
	* sysdeps/i386/fpu/s_tanf.S: Likewise.
	Patch by Miloslav Trmac <mitr@volny.cz> (PR libc/1563).

	* iconvdata/Makefile (modules): Add UTF-16.
	(distribute): Add utf-16.c.
	* iconvdata/gconv-modules: Add entries for UTF-16, UTF-16BE, and
	UTF-16LE.
	* iconvdata/utf-16.c: New file.