@@ -1,3 +1,13 @@
+2000-02-16  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/powerpc/mmap64.c (__mmap64): Fix return
+	value.
+
+2000-02-16  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/powerpc/ftruncate64.c (ftruncate64): Fix
+	typo.
+
 2000-02-15  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/i386/fpu/libm-test-ulps: Add one value for AMD K7.
